<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Trading Simulator</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Stocks</string>
    <string name="title_section2">Portfolio</string>
    <string name="title_activity_add_stock">AddStockActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stock">Stock Details</string>
    <string name="changep">Change (%)</string>
    <string name="price">Price</string>
    <string name="volume">Volume</string>
    <string name="capitalization">Capitalization</string>
    <string name="maxd">Max. day</string>
    <string name="mind">Min. day</string>
    <string name="maxy">Max. year</string>
    <string name="miny">Min. year</string>
    <string name="close">Last Close</string>
    <string name="open">Open</string>

    <string-array name="chartTimes">
        <item>1 Day</item>
        <item>5 Day</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>5 Years</item>
        <item>Maximum</item>
    </string-array>
    <string-array name="chartTypes">
        <item>Line</item>
        <item>Bar</item>
        <item>Candlestick</item>
    </string-array>

    <string name="ownedshares">Owned shares</string>
    <string name="value">Value</string>

    <string-array name="chartTypesValues">
        <item>l</item>
        <item>b</item>
        <item>c</item>
    </string-array>
    <string-array name="chartTimesValues">
        <item>1d</item>
        <item>5d</item>
        <item>3m</item>
        <item>6m</item>
        <item>1y</item>
        <item>2y</item>
        <item>5y</item>
        <item>my</item>
    </string-array>

    <string name="dialog_continue">Continue</string>
    <string name="dialog_message">You\'re about to make a short sale. You will be forced to buy this shares soon. Proceed?</string>
    <string name="update">Update</string>
    <string name="title_activity_buy">Buy shares</string>
    <string name="balance">Avaliable balance</string>
    <string name="buy">BUY</string>
    <string name="noconnection_title">No Internet connection</string>
    <string name="noconnection_message">Unable to load stocks data</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="title_activity_sell">Sell shares</string>
    <string name="error_balance">Error: your balance is not sufficent</string>
    <string name="warning_shortsell">Warning: you are going to make a short sale</string>
    <string name="sell">SELL</string>
    <string name="dialog_cantdelete">Cannot delete</string>
    <string name="coveryourpos">Cover your short sale on %s shares</string>
    <string name="sellyourshares">Sell all %s shares you own</string>
    <string name="initialbalance">Initial balance</string>
    <string name="totalvalue">Total value</string>
    <string name="sharesvalue">Shares value</string>
    <string name="welcome_message">Welcome to Trading Simulator</string>
    <string name="set_initial_balance_message">Set your initial balance</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="error_balance_shortsale">Your balance is not sufficient to cover your short sale.</string>

</resources>
