<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StockActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="56dp"
        android:clipToPadding="false"
        android:id="@+id/scrollView1"
        android:background="@android:color/background_light" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/box"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="GOOG"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/stockexchange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Nasdaq"
                    android:textSize="25sp" />
                
            </LinearLayout>
                
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/changep"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="584.5"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/change"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="+2.4 (+0.21%)"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

				<TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/ownedshares"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/value"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow14"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/owned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="50"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="29225"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/capitalization"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/volume"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/capitalization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="392.4B"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/volume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="582615"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </TableRow>
                
				<TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/open"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/close"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow12"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="583.35"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="582.67"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/maxd"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/mind"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/maxd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="585.4399"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/mind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="580.39"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/maxy"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/miny"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:background="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/maxy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="604.83"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/miny"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="502.80"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >
                
                    <Spinner
                        android:id="@+id/chartTimes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:entries="@array/chartTimes"
                        android:spinnerMode="dropdown"
                        tools:listitem="@android:layout/simple_spinner_dropdown_item" />
                
                    <Spinner
                        android:id="@+id/chartTypes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:entries="@array/chartTypes"
                        android:spinnerMode="dropdown"
                        tools:listitem="@android:layout/simple_spinner_dropdown_item" />
                    
				</TableRow>
                
			</TableLayout>
			
            <ImageView
                android:scaleType="fitCenter"
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/z"
                android:layout_margin="4dp" />
            
        </LinearLayout>
        
    </ScrollView>

	<View
	    android:id="@+id/view1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/circleButton_buy"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/relativeLayout1"
	    android:background="@drawable/white_shadow" />
	
    <it.apc.tradingsimulator.CircleButton
        android:id="@+id/circleButton_buy"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_action_add"
        app:cb_color="#99CC00"
        app:cb_pressed_ring_width="8dip" />

    <it.apc.tradingsimulator.CircleButton
        android:id="@+id/circleButton_sell"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/circleButton_buy"
        android:src="@drawable/ic_action_sell"
        app:cb_color="#FF4444"
        app:cb_pressed_ring_width="8dip" />

    <it.apc.tradingsimulator.CircleButton
        android:id="@+id/circleButton_delete"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_action_delete"
        app:cb_color="#DDDDDD"
        app:cb_pressed_ring_width="8dip" />
    
	<ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    
</RelativeLayout>